// Dotlanth
// Copyright (C) 2025 Synerthink

// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.

// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

//! Metrics collector - collects and aggregates VM metrics

use std::collections::HashMap;
use thiserror::Error;
use tracing::{error, info, instrument};

use crate::proto::vm_service::{GetVmMetricsRequest, GetVmMetricsResponse, MetricDataPoint, VmMetric};

#[derive(Error, Debug)]
pub enum MetricsError {
    #[error("Collection failed: {0}")]
    CollectionFailed(String),
    #[error("Invalid metric name: {0}")]
    InvalidMetricName(String),
}

/// Metrics collector gathers system and VM metrics
pub struct MetricsCollector {
    // TODO: Add actual metrics storage and collection
}

impl MetricsCollector {
    pub fn new() -> Self {
        Self {}
    }

    #[instrument(skip(self, request))]
    pub async fn collect_metrics(&self, request: GetVmMetricsRequest) -> Result<GetVmMetricsResponse, MetricsError> {
        info!("Collecting VM metrics");

        // TODO: Implement actual metrics collection
        // For now, return mock metrics

        let mut metrics = Vec::new();

        // Mock CPU usage metric
        metrics.push(VmMetric {
            name: "cpu_usage_percent".to_string(),
            r#type: "gauge".to_string(),
            data_points: vec![MetricDataPoint {
                timestamp: chrono::Utc::now().timestamp() as u64,
                value: 25.5,
            }],
            labels: {
                let mut labels = HashMap::new();
                labels.insert("component".to_string(), "vm".to_string());
                labels
            },
        });

        // Mock memory usage metric
        metrics.push(VmMetric {
            name: "memory_usage_bytes".to_string(),
            r#type: "gauge".to_string(),
            data_points: vec![MetricDataPoint {
                timestamp: chrono::Utc::now().timestamp() as u64,
                value: 104857600.0, // 100MB
            }],
            labels: {
                let mut labels = HashMap::new();
                labels.insert("component".to_string(), "vm".to_string());
                labels
            },
        });

        Ok(GetVmMetricsResponse { metrics })
    }
}
