// Dotlanth
// Copyright (C) 2025 Synerthink

// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.

// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

//! VM management service implementation

use std::collections::HashMap;
use tonic::{Request, Response, Result as TonicResult, Status};
use tracing::{error, info, instrument};

use crate::proto::vm_service::{ArchitectureInfo, GetArchitecturesRequest, GetArchitecturesResponse, GetVmStatusRequest, GetVmStatusResponse, PerformanceProfile, ResourceUsage, VmInfo, VmStatus};

/// VM management service handles VM lifecycle and configuration
pub struct VmManagementService {
    // TODO: Add actual VM management components
}

impl VmManagementService {
    pub fn new() -> Self {
        Self {}
    }

    #[instrument(skip(self, request))]
    pub async fn get_vm_status(&self, request: Request<GetVmStatusRequest>) -> TonicResult<Response<GetVmStatusResponse>> {
        let _req = request.into_inner();

        info!("Getting VM status");

        // TODO: Get actual VM status
        let response = GetVmStatusResponse {
            status: VmStatus::Running as i32,
            info: Some(VmInfo {
                version: "0.1.0".to_string(),
                architecture: "arch64".to_string(),
                uptime_seconds: 3600, // 1 hour
                dots_count: 5,
                paradots_count: 3,
                resource_usage: Some(ResourceUsage {
                    memory_used_bytes: 1024 * 1024 * 100,   // 100MB
                    memory_total_bytes: 1024 * 1024 * 1024, // 1GB
                    cpu_usage_percent: 25.5,
                    storage_used_bytes: 1024 * 1024 * 500, // 500MB
                    active_connections: 10,
                }),
            }),
            active_dots: vec!["dot_12345678".to_string()],
            active_paradots: vec!["paradot_87654321".to_string()],
        };

        Ok(Response::new(response))
    }

    #[instrument(skip(self, request))]
    pub async fn get_architectures(&self, request: Request<GetArchitecturesRequest>) -> TonicResult<Response<GetArchitecturesResponse>> {
        let _req = request.into_inner();

        info!("Getting supported architectures");

        let architectures = vec![
            ArchitectureInfo {
                name: "arch64".to_string(),
                description: "64-bit architecture".to_string(),
                features: vec!["simd".to_string(), "parallel".to_string()],
                is_default: true,
                performance: Some(PerformanceProfile {
                    optimization_level: "O2".to_string(),
                    supports_simd: true,
                    supports_parallel: true,
                    max_memory_gb: 16,
                }),
            },
            ArchitectureInfo {
                name: "arch128".to_string(),
                description: "128-bit architecture".to_string(),
                features: vec!["simd".to_string(), "parallel".to_string(), "extended".to_string()],
                is_default: false,
                performance: Some(PerformanceProfile {
                    optimization_level: "O3".to_string(),
                    supports_simd: true,
                    supports_parallel: true,
                    max_memory_gb: 64,
                }),
            },
        ];

        let response = GetArchitecturesResponse { architectures };

        Ok(Response::new(response))
    }
}
